verson funcionando corretamente

--- a/src/app/courses/course-list.component.html
+++ b/src/app/courses/course-list.component.html
@@ -15,7 +15,7 @@
         </tr>
     </thead>
 
-    <body>
+    <tbody>
         <tr *ngFor="let course of courses">
             <td>{{course.imageUrl}}</td>
             <td>{{course.name}}</td>
@@ -24,6 +24,6 @@
             <td>{{course.rating}}</td>
             <td></td>
             
-    </body>
+    </tbody>
 
 </table>
