--- a/src/app/courses/course-list.component.html
+++ b/src/app/courses/course-list.component.html
@@ -17,11 +17,14 @@
 
     <tbody>
         <tr *ngFor="let course of courses">
-            <td>{{course.imageUrl}}</td>
+            <td> <img [src]="course.imageUrl" width="40px" height="40px" >
+            </td>
             <td>{{course.name}}</td>
             <td>{{course.price}}</td>
             <td>{{course.releaseDate}}</td>
-            <td>{{course.rating}}</td>
+            <td>
+                <app-star [rating]="course.rating"></app-star>    <!-- atributo la do input que foi criado no stat.component.ts-->
+            </td>
             <td></td>
             
     </tbody>
