--- a/src/app/courses/course-list.component.html
+++ b/src/app/courses/course-list.component.html
@@ -1,6 +1,15 @@
 
 <h2>Course List</h2>
 
+<div class="form-group row">
+
+  <label class="col-sm-2 col-form-label">Filter By</label>
+  
+  <div class="col-sm-th">
+    <input [(ngModel)]="filter" class="form-control">
+  </div>
+
+</div>
 
 <table class="table table-striped">
     <thead>
@@ -16,7 +25,7 @@
     </thead>
 
     <tbody>
-        <tr *ngFor="let course of courses">
+        <tr *ngFor="let course of filteredCourses">
             <td> <img [src]="course.imageUrl" width="40px" height="40px" >
             </td>
             <td>{{course.name}}</td>
