--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,6 @@
+<app-nav-bar></app-nav-bar>
 
-<div class="container">
-  <app-course-list> </app-course-list>
+<div class="container at-4">
+    <router-outlet></router-outlet>
 </div>
 
