--- a/src/app/courses/course-list.component.html
+++ b/src/app/courses/course-list.component.html
@@ -30,7 +30,8 @@
             </td>
             <td>{{course.name}}</td>
             <td>{{course.price}}</td>
-            <td>{{course.releaseDate}}</td>
+            <td>{{course.code | lowercase | replace: '-': ' '}}</td>
+            <td>{{course.releaseDate | date: 'dd/MM/yyyy'}}</td>
             <td>
                 <app-star [rating]="course.rating"></app-star>    <!-- atributo la do input que foi criado no stat.component.ts-->
             </td>
